<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button_administration"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/back_icon"
        android:focusable="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/back_icon" />

    <Button
        android:id="@+id/cita_medico_administration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:gravity="center"
        android:text="@string/cita_medico"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAdministration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pastillas_administration"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:layout_marginTop="280dp"
        android:text="@string/pastillas"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewAdministration" />

    <ImageView
        android:id="@+id/imageViewAdministration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_medication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pastillasmain" />

    <ImageButton
        android:id="@+id/help_icon_administration"
        android:layout_width="55dp"
        android:layout_height="63dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/help_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/help_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>