<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/login_button"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_administration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_button"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/back_icon"
        android:focusable="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/back_icon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_medication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pastillasmain" />

    <ImageButton
        android:id="@+id/help_icon"
        android:layout_width="55dp"
        android:layout_height="63dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/help_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/help_icon" />

    <Button
        android:id="@+id/forget_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="352dp"
        android:layout_height="73dp"
        android:layout_marginTop="104dp"
        android:text="@string/has_olvidado_la_contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextPassword" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="319dp"
        android:layout_height="70dp"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>