<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5EC1D1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleMenu"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleMenu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/FirstButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/fondo_blanco"
            android:text="@string/TextFirstButton" />

        <RadioButton
            android:id="@+id/SecondButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/fondo_blanco"
            android:text="@string/TextSecondButton" />
    </RadioGroup>

    <Button
        android:id="@+id/ReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atras"
        android:backgroundTint="#ec407a"
        tools:ignore="MissingConstraints"
        android:textColor="#ffff"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp">
    </Button>

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continuar"
        android:backgroundTint="#2CDA26"
        tools:ignore="MissingConstraints"
        android:textColor="#ffff"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp">
    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>